unpackaged/main/default/objects/Application__c/fields/AccountNumber__c.field-meta.xml
<CustomField>
    <fullName>AccountNumber__c</fullName>
    <inlineHelpText>HAY Unique Account Number</inlineHelpText>
    <label>Account Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>