unpackaged/main/default/objects/Application__c/fields/Applicant1FirstName__c.field-meta.xml
<CustomField>
    <fullName>Applicant1FirstName__c</fullName>
    <label>Applicant 1 First Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>