unpackaged/main/default/objects/Application__c/fields/Applicant1LastName__c.field-meta.xml
<CustomField>
    <fullName>Applicant1LastName__c</fullName>
    <label>Applicant 1 Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>