unpackaged/main/default/objects/Application__c/fields/ApplicationLabel__c.field-meta.xml
<CustomField>
    <fullName>ApplicationLabel__c</fullName>
    <formula>BLANKVALUE(Applicant1LastName__c,  Account__r.LastName)  &amp; " (" &amp;  TEXT(JointSingle__c) &amp; ")"</formula>
    <label>Application Label</label>
    <type>Text</type>
</CustomField>