unpackaged/main/default/objects/Application__c/fields/AVM5LVR__c.field-meta.xml
<CustomField>
    <fullName>AVM5LVR__c</fullName>
    <label>AVM + 5% LVR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>