unpackaged/main/default/objects/Application__c/fields/AVMLVR__c.field-meta.xml
<CustomField>
    <fullName>AVMLVR__c</fullName>
    <label>AVM LVR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>