unpackaged/main/default/objects/Application__c/fields/CL_Contract__c.field-meta.xml
<CustomField>
    <fullName>CL_Contract__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CL Contract</label>
    <referenceTo>loan__Loan_Account__c</referenceTo>
    <relationshipLabel>Applications</relationshipLabel>
    <relationshipName>Applications</relationshipName>
    <type>Lookup</type>
</CustomField>