unpackaged/main/default/objects/Application__c/fields/ComparisonRate__c.field-meta.xml
<CustomField>
    <fullName>ComparisonRate__c</fullName>
    <description>Dynamic comparison rates to be used in email comms. Also, comparison rates are legally required to be advertised by credit providers alongside product interest rates.</description>
    <label>Comparison Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>