unpackaged/main/default/objects/Application__c/fields/CurrentLoanBalance__c.field-meta.xml
<CustomField>
    <fullName>CurrentLoanBalance__c</fullName>
    <label>Current Loan Balance</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>