unpackaged/main/default/objects/Application__c/fields/CurrentLoanterm__c.field-meta.xml
<CustomField>
    <fullName>CurrentLoanterm__c</fullName>
    <inlineHelpText>In years</inlineHelpText>
    <label>Current Loan term</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>