unpackaged/main/default/objects/Application__c/fields/DaysInCurrentStatus__c.field-meta.xml
<CustomField>
    <fullName>DaysInCurrentStatus__c</fullName>
    <formula>Today() - StatusChangedDate__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days In Current Status</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>