unpackaged/main/default/objects/Application__c/fields/Decision__c.field-meta.xml
<CustomField>
    <fullName>Decision__c</fullName>
    <label>Decision</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Decline - Hard</fullName>
            </value>
            <value>
                <fullName>Decline - Soft</fullName>
            </value>
            <value>
                <fullName>Refer - Capacity</fullName>
            </value>
            <value>
                <fullName>Refer - Bureau</fullName>
            </value>
            <value>
                <fullName>Refer - Collateral</fullName>
            </value>
            <value>
                <fullName>Refer – Applicant</fullName>
            </value>
            <value>
                <fullName>Acceptance Condition</fullName>
            </value>
            <value>
                <fullName>Auto-Approved</fullName>
            </value>
            <value>
                <fullName>Approved Manually</fullName>
            </value>
            <value>
                <fullName>Fallback Approve</fullName>
            </value>
            <value>
                <fullName>Vendor Response</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>