unpackaged/main/default/objects/Application__c/fields/DecisionCode__c.field-meta.xml
<CustomField>
    <fullName>DecisionCode__c</fullName>
    <label>Decision Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DH</fullName>
            </value>
            <value>
                <fullName>DS</fullName>
            </value>
            <value>
                <fullName>RC</fullName>
            </value>
            <value>
                <fullName>RB</fullName>
            </value>
            <value>
                <fullName>RV</fullName>
            </value>
            <value>
                <fullName>RA</fullName>
            </value>
            <value>
                <fullName>AC</fullName>
            </value>
            <value>
                <fullName>AA</fullName>
            </value>
            <value>
                <fullName>AM</fullName>
            </value>
            <value>
                <fullName>FA</fullName>
            </value>
            <value>
                <fullName>VR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>