unpackaged/main/default/objects/Application__c/fields/DecisionReport__c.field-meta.xml
<CustomField>
    <fullName>DecisionReport__c</fullName>
    <label>Decision Report</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>