unpackaged/main/default/objects/Application__c/fields/DiscountType__c.field-meta.xml
<CustomField>
    <fullName>DiscountType__c</fullName>
    <label>Discount Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Family &amp; Friends</fullName>
            </value>
            <value>
                <fullName>Waitlist</fullName>
            </value>
            <value>
                <fullName>New Customer</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>