unpackaged/main/default/objects/Application__c/fields/DTIRatio__c.field-meta.xml
<CustomField>
    <fullName>DTIRatio__c</fullName>
    <description>Gross Debt for DTI / Gross Income for DTI</description>
    <label>DTI Ratio</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>