unpackaged/main/default/objects/Application__c/fields/EVMLVR__c.field-meta.xml
<CustomField>
    <fullName>EVMLVR__c</fullName>
    <label>EVM LVR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>