unpackaged/main/default/objects/Application__c/fields/ExpensesHEM__c.field-meta.xml
<CustomField>
    <fullName>ExpensesHEM__c</fullName>
    <label>HEM Multiple</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>