unpackaged/main/default/objects/Application__c/fields/Express__c.field-meta.xml
<CustomField>
    <fullName>Express__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Express</label>
    <type>Checkbox</type>
</CustomField>