unpackaged/main/default/objects/Application__c/fields/FamilyFriendsDiscount__c.field-meta.xml
<CustomField>
    <fullName>FamilyFriendsDiscount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Family &amp; Friends Discount (Deprecated)</label>
    <type>Checkbox</type>
</CustomField>