unpackaged/main/default/objects/Application__c/fields/FinancialLastModifiedBy__c.field-meta.xml
<CustomField>
    <fullName>FinancialLastModifiedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Captures updates made by internal user</description>
    <label>Financial Last Modified By</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Applications</relationshipName>
    <type>Lookup</type>
</CustomField>