unpackaged/main/default/objects/Application__c/fields/FinancialLastModifiedDate__c.field-meta.xml
<CustomField>
    <fullName>FinancialLastModifiedDate__c</fullName>
    <description>Capture updates made by internal users</description>
    <label>Financial Last Modified Date</label>
    <type>DateTime</type>
</CustomField>