unpackaged/main/default/objects/Application__c/fields/FirstYearSavings__c.field-meta.xml
<CustomField>
    <fullName>FirstYearSavings__c</fullName>
    <label>First Year Savings</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>