unpackaged/main/default/objects/Application__c/fields/GrossDebtforDTI__c.field-meta.xml
<CustomField>
    <fullName>GrossDebtforDTI__c</fullName>
    <description>Nano loan value - Refinanced loan value(s) + Value of any other home liabilities (including Loans, Credit Cards, etc) held by the applicant.</description>
    <label>Gross Debt for DTI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>