unpackaged/main/default/objects/Application__c/fields/GrossIncomeforDTI__c.field-meta.xml
<CustomField>
    <fullName>GrossIncomeforDTI__c</fullName>
    <description>Base salary + Rental income + Car allowance + Regular overtime &amp; shift allowances + Commission + Bonus.</description>
    <label>Gross Income for DTI</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>