unpackaged/main/default/objects/Application__c/fields/HayAccountID__c.field-meta.xml
<CustomField>
    <fullName>HayAccountID__c</fullName>
    <label>Hay Account ID</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>