unpackaged/main/default/objects/Application__c/fields/HayGroupId__c.field-meta.xml
<CustomField>
    <fullName>HayGroupId__c</fullName>
    <label>Hay Group Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>