unpackaged/main/default/objects/Application__c/fields/Identity_Status__c.field-meta.xml
<CustomField>
    <fullName>Identity_Status__c</fullName>
    <inlineHelpText>This value is the result of Applicant Identity Check</inlineHelpText>
    <label>Identity Status</label>
    <length>75</length>
    <type>Text</type>
</CustomField>