unpackaged/main/default/objects/Application__c/fields/InterestOnlyRate__c.field-meta.xml
<CustomField>
    <fullName>InterestOnlyRate__c</fullName>
    <label>Interest Only Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>