unpackaged/main/default/objects/Application__c/fields/InterestOnlyRepayment__c.field-meta.xml
<CustomField>
    <fullName>InterestOnlyRepayment__c</fullName>
    <label>Interest Only Repayment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>