unpackaged/main/default/objects/Application__c/fields/InterestOnlyTermMonths__c.field-meta.xml
<CustomField>
    <fullName>InterestOnlyTermMonths__c</fullName>
    <label>Interest-Only Term Months</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>