unpackaged/main/default/objects/Application__c/fields/InterestRate__c.field-meta.xml
<CustomField>
    <fullName>InterestRate__c</fullName>
    <label>Interest Rate</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>