unpackaged/main/default/objects/Application__c/fields/InterestRateOnCurrentLoan__c.field-meta.xml
<CustomField>
    <fullName>InterestRateOnCurrentLoan__c</fullName>
    <label>Interest Rate on Current Loan</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>