unpackaged/main/default/objects/Application__c/fields/InterestRateType__c.field-meta.xml
<CustomField>
    <fullName>InterestRateType__c</fullName>
    <label>Interest Rate Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Variable</fullName>
                <default>true</default>
                <label>Variable</label>
            </value>
            <value>
                <fullName>Fixed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>