unpackaged/main/default/objects/Application__c/fields/isApproved__c.field-meta.xml
<CustomField>
    <fullName>isApproved__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approved</label>
    <type>Checkbox</type>
</CustomField>