unpackaged/main/default/objects/Application__c/fields/isDeclined__c.field-meta.xml
<CustomField>
    <fullName>isDeclined__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Declined</label>
    <type>Checkbox</type>
</CustomField>