unpackaged/main/default/objects/Application__c/fields/isSubmitted__c.field-meta.xml
<CustomField>
    <fullName>isSubmitted__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Submitted</label>
    <type>Checkbox</type>
</CustomField>