unpackaged/main/default/objects/Application__c/fields/JointSingle__c.field-meta.xml
<CustomField>
    <fullName>JointSingle__c</fullName>
    <label>Joint/Single</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Joint</fullName>
            </value>
            <value>
                <fullName>Single</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>