unpackaged/main/default/objects/Application__c/fields/LatestAssetUpdated__c.field-meta.xml
<CustomField>
    <fullName>LatestAssetUpdated__c</fullName>
    <label>Latest Asset Updated</label>
    <summarizedField>Asset__c.LastModifiedDate</summarizedField>
    <summaryForeignKey>Asset__c.Application__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>