unpackaged/main/default/objects/Application__c/fields/LatestExpenseUpdated__c.field-meta.xml
<CustomField>
    <fullName>LatestExpenseUpdated__c</fullName>
    <label>Latest Expense Updated</label>
    <summarizedField>Expense__c.LastModifiedDate</summarizedField>
    <summaryForeignKey>Expense__c.Application__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>