unpackaged/main/default/objects/Application__c/fields/LatestIncomeUpdated__c.field-meta.xml
<CustomField>
    <fullName>LatestIncomeUpdated__c</fullName>
    <label>Latest Income Updated</label>
    <summarizedField>Income__c.LastModifiedDate</summarizedField>
    <summaryForeignKey>Income__c.Application__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>