unpackaged/main/default/objects/Application__c/fields/LatestLiabilityUpdated__c.field-meta.xml
<CustomField>
    <fullName>LatestLiabilityUpdated__c</fullName>
    <label>Latest Liability Updated</label>
    <summarizedField>Liability__c.LastModifiedDate</summarizedField>
    <summaryForeignKey>Liability__c.Application__c</summaryForeignKey>
    <summaryOperation>max</summaryOperation>
    <type>Summary</type>
</CustomField>