unpackaged/main/default/objects/Application__c/fields/LendingProduct__c.field-meta.xml
<CustomField>
    <fullName>LendingProduct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lending Product</label>
    <referenceTo>loan__Loan_Product__c</referenceTo>
    <relationshipLabel>Applications</relationshipLabel>
    <relationshipName>Applications</relationshipName>
    <type>Lookup</type>
</CustomField>