unpackaged/main/default/objects/Application__c/fields/LoanDocumentationType__c.field-meta.xml
<CustomField>
    <fullName>LoanDocumentationType__c</fullName>
    <label>Loan Documentation Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Full</fullName>
                <default>true</default>
                <label>Full</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>