unpackaged/main/default/objects/Application__c/fields/LoanDurationInMonths__c.field-meta.xml
<CustomField>
    <fullName>LoanDurationInMonths__c</fullName>
    <defaultValue>300</defaultValue>
    <label>Loan Duration in Months</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>