unpackaged/main/default/objects/Application__c/fields/LoanOriginationChannel__c.field-meta.xml
<CustomField>
    <fullName>LoanOriginationChannel__c</fullName>
    <label>Loan Origination Channel</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Direct</fullName>
                <default>true</default>
                <label>Direct</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>