unpackaged/main/default/objects/Application__c/fields/LoanPurpose__c.field-meta.xml
<CustomField>
    <fullName>LoanPurpose__c</fullName>
    <label>Loan Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Purchase</fullName>
            </value>
            <value>
                <fullName>Refinance</fullName>
                <default>true</default>
                <label>Refinance</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>