unpackaged/main/default/objects/Application__c/fields/LVR_EMV_DTI__c.field-meta.xml
<CustomField>
    <fullName>LVR_EMV_DTI__c</fullName>
    <formula>BLANKVALUE(TEXT(ROUND(AVMLVR__c * 100,1)), "-") &amp; " / " &amp; BLANKVALUE(TEXT(ROUND(EVMLVR__c * 100,1)), "-") &amp; " / " &amp;  BLANKVALUE(TEXT(ROUND( GrossDebtforDTI__c /  GrossIncomeforDTI__c ,1)), "-")</formula>
    <label>LVR / EMV / DTI</label>
    <type>Text</type>
</CustomField>