unpackaged/main/default/objects/Application__c/fields/MatterNotProcessing__c.field-meta.xml
<CustomField>
    <fullName>MatterNotProcessing__c</fullName>
    <label>Matter Not Processing</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Placeholder CancelMatter Reason</fullName>
            </value>
            <value>
                <fullName>Broker advised no longer proceeding</fullName>
            </value>
            <value>
                <fullName>Loan Documents expired</fullName>
            </value>
            <value>
                <fullName>Lender advised no longer proceeding</fullName>
            </value>
            <value>
                <fullName>Duplicate</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>