unpackaged/main/default/objects/Application__c/fields/MatterOnHold__c.field-meta.xml
<CustomField>
    <fullName>MatterOnHold__c</fullName>
    <label>Matter On Hold</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Broker advised to place the matter on hold</fullName>
            </value>
            <value>
                <fullName>Lender advised to place file on hold</fullName>
            </value>
            <value>
                <fullName>Confirming instructions with lender</fullName>
            </value>
            <value>
                <fullName>Instruction Error</fullName>
            </value>
            <value>
                <fullName>Name Discrepancies</fullName>
            </value>
            <value>
                <fullName>Supporting Document Missing</fullName>
            </value>
            <value>
                <fullName>Mortgagor Discrepancy</fullName>
            </value>
            <value>
                <fullName>Data change – Ownership split</fullName>
            </value>
            <value>
                <fullName>Data change - Name</fullName>
            </value>
            <value>
                <fullName>Data change – Email address</fullName>
            </value>
            <value>
                <fullName>Data change – Mobile number</fullName>
            </value>
            <value>
                <fullName>Data change – security address</fullName>
            </value>
            <value>
                <fullName>Data change – residential address</fullName>
            </value>
            <value>
                <fullName>Data change – special condition</fullName>
            </value>
            <value>
                <fullName>Rate Dispute</fullName>
            </value>
            <value>
                <fullName>Resubmission</fullName>
            </value>
            <value>
                <fullName>Credit expiry date</fullName>
            </value>
            <value>
                <fullName>Further ID Required</fullName>
            </value>
            <value>
                <fullName>Title Search Discrepancy</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>