unpackaged/main/default/objects/Application__c/fields/MaxLend__c.field-meta.xml
<CustomField>
    <fullName>MaxLend__c</fullName>
    <label>Max Lend</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>