unpackaged/main/default/objects/Application__c/fields/MonthlyExpenses__c.field-meta.xml
<CustomField>
    <fullName>MonthlyExpenses__c</fullName>
    <label>Monthly Expenses</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>