unpackaged/main/default/objects/Application__c/fields/MonthlyIncome__c.field-meta.xml
<CustomField>
    <fullName>MonthlyIncome__c</fullName>
    <label>Monthly Income</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>