unpackaged/main/default/objects/Application__c/fields/MonthlyLiabilities__c.field-meta.xml
<CustomField>
    <fullName>MonthlyLiabilities__c</fullName>
    <label>Monthly Liabilities</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>