unpackaged/main/default/objects/Application__c/fields/MSAMatterId__c.field-meta.xml
<CustomField>
    <fullName>MSAMatterId__c</fullName>
    <label>MSA Matter Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>