unpackaged/main/default/objects/Application__c/fields/NewCustomerDiscount__c.field-meta.xml
<CustomField>
    <fullName>NewCustomerDiscount__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New Customer Discount (Deprecated)</label>
    <type>Checkbox</type>
</CustomField>