unpackaged/main/default/objects/Application__c/fields/NoofInstallments__c.field-meta.xml
<CustomField>
    <fullName>NoofInstallments__c</fullName>
    <formula>IF ( TEXT(PaymentFrequency__c) = "Monthly",  LoanDurationInMonths__c , IF(TEXT(PaymentFrequency__c) = "Weekly", (LoanDurationInMonths__c/12*52), (LoanDurationInMonths__c/12*26)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>No. of Installments</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>