unpackaged/main/default/objects/Application__c/fields/Payment_Frequency_mapping_to_CL__c.field-meta.xml
<CustomField>
    <fullName>Payment_Frequency_mapping_to_CL__c</fullName>
    <formula>Case (TEXT( PaymentFrequency__c ), 
"Weekly", "Weekly",
"Monthly", "Monthly",
"Fortnightly", "Bi-weekly",
"Monthly")</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Payment Frequency mapping to CL</label>
    <type>Text</type>
</CustomField>