unpackaged/main/default/objects/Application__c/fields/PaymentFrequency__c.field-meta.xml
<CustomField>
    <fullName>PaymentFrequency__c</fullName>
    <label>Payment Frequency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>PaymentFrequency</valueSetName>
    </valueSet>
</CustomField>