unpackaged/main/default/objects/Application__c/fields/PaymentStartDate__c.field-meta.xml
<CustomField>
    <fullName>PaymentStartDate__c</fullName>
    <label>Payment Start Date</label>
    <type>Date</type>
</CustomField>