unpackaged/main/default/objects/Application__c/fields/PreviousStatus__c.field-meta.xml
<CustomField>
    <fullName>PreviousStatus__c</fullName>
    <label>Previous Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>