unpackaged/main/default/objects/Application__c/fields/PropertyPurpose__c.field-meta.xml
<CustomField>
    <fullName>PropertyPurpose__c</fullName>
    <label>Property Purpose</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Property_Purpose</valueSetName>
    </valueSet>
</CustomField>