unpackaged/main/default/objects/Application__c/fields/PropertyValue__c.field-meta.xml
<CustomField>
    <fullName>PropertyValue__c</fullName>
    <label>Property Value</label>
    <precision>16</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>