unpackaged/main/default/objects/Application__c/fields/ReduceLoanvalue__c.field-meta.xml
<CustomField>
    <fullName>ReduceLoanvalue__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Reduce Loan Value</label>
    <type>Checkbox</type>
</CustomField>