unpackaged/main/default/objects/Application__c/fields/RefinanceReason__c.field-meta.xml
<CustomField>
    <fullName>RefinanceReason__c</fullName>
    <label>Loan Purpose</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>I want a better variable rate</fullName>
            </value>
            <value>
                <fullName>I want to pay off my home loan sooner</fullName>
            </value>
            <value>
                <fullName>I want to refinance and borrow extra money (up to $100,000) for Home Improvements</fullName>
            </value>
            <value>
                <fullName>I want to refinance and borrow extra money (up to $100,000) for Personal Assets</fullName>
            </value>
            <value>
                <fullName>I want a better experience with my lender and more flexibility from my loan.</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>