unpackaged/main/default/objects/Application__c/fields/RepaymentCalc__c.field-meta.xml
<CustomField>
    <fullName>RepaymentCalc__c</fullName>
    <description>When we get the repayment amount for the contract, it must be CL if not it will get it from CL API and save it with CL set before returning it.

When we recalc, if the status even allows us to recalc (see OK-857) then if it’s CL it uses CL API, otherwise it uses PY.</description>
    <inlineHelpText>CL it uses CL API, otherwise it uses PY.</inlineHelpText>
    <label>Repayment Calc</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>PY</fullName>
                <default>true</default>
                <label>PY</label>
            </value>
            <value>
                <fullName>CL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>