unpackaged/main/default/objects/Application__c/fields/RepaymentSavings__c.field-meta.xml
<CustomField>
    <fullName>RepaymentSavings__c</fullName>
    <label>Repayment Savings</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>