unpackaged/main/default/objects/Application__c/fields/Serviceability__c.field-meta.xml
<CustomField>
    <fullName>Serviceability__c</fullName>
    <label>Serviceability</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Standard</fullName>
            </value>
            <value>
                <fullName>Express</fullName>
            </value>
            <value>
                <fullName>Failed</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>