unpackaged/main/default/objects/Application__c/fields/ServiceabilityMet__c.field-meta.xml
<CustomField>
    <fullName>ServiceabilityMet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Serviceability Met</label>
    <type>Checkbox</type>
</CustomField>