unpackaged/main/default/objects/Application__c/fields/SettlementCode__c.field-meta.xml
<CustomField>
    <fullName>SettlementCode__c</fullName>
    <label>Settlement Code</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>IR</fullName>
            </value>
            <value>
                <fullName>RR</fullName>
            </value>
            <value>
                <fullName>DS</fullName>
            </value>
            <value>
                <fullName>DR</fullName>
            </value>
            <value>
                <fullName>DV</fullName>
            </value>
            <value>
                <fullName>OR</fullName>
            </value>
            <value>
                <fullName>RB</fullName>
            </value>
            <value>
                <fullName>SB</fullName>
            </value>
            <value>
                <fullName>SC</fullName>
            </value>
            <value>
                <fullName>TR</fullName>
            </value>
            <value>
                <fullName>CT</fullName>
            </value>
            <value>
                <fullName>MOH</fullName>
            </value>
            <value>
                <fullName>OFFH</fullName>
            </value>
            <value>
                <fullName>MNP</fullName>
            </value>
            <value>
                <fullName>CS</fullName>
            </value>
            <value>
                <fullName>PS</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>