unpackaged/main/default/objects/Application__c/fields/SettlementDate__c.field-meta.xml
<CustomField>
    <fullName>SettlementDate__c</fullName>
    <defaultValue>(TODAY()  + 30)</defaultValue>
    <label>Settlement Date</label>
    <type>Date</type>
</CustomField>